@@ -1,5 +1,9 @@
 2008-11-18  Josselin Mouette  <joss@malsain.org>
 
+	* esddsp.c: (mmap64): ship an implementation of mmap64.
+
+2008-11-18  Josselin Mouette  <joss@malsain.org>
+
 	* esd.c: (main): close the spawnfd when the startup is 
         successful.
 
